--- a/src/app/App.css
+++ b/src/app/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #080d6f;
   min-height: 20vh;
   display: flex;
   flex-direction: column;
