--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
-@import "./styles/theme";
-@import "./styles/fonts";
-@import "./styles/reboot";
-@import "./styles/utils";
-@import "./styles/customize";
+@import "styles/theme";
+@import "styles/fonts";
+@import "styles/reboot";
+@import "styles/utils";
+@import "styles/customize";
